styled the header

--- a/css/index.css
+++ b/css/index.css
@@ -66,10 +66,31 @@ p {
     line-height: 1.4;
 }
 
+/* My Code Starts Here */
+
 .container {
     width: 800px;
-    margin: 0 auto;
+    margin: 0px auto;
+    margin-top: 20px; 
+    font-weight: 400; 
 }
+
+/* Header */
+
+.nav {
+    display: inline-block;
+    position: relative;
+    bottom: 2px; 
+    left: 35px; 
+    word-spacing: 83px; 
+}
+
+.nav a {
+    text-decoration: none;
+    font-size: 14px;
+    color: black; 
+}
+
 
 .top-content {
     display: flex;
