--- a/css/about.css
+++ b/css/about.css
@@ -97,13 +97,16 @@ p {
 }
 
 .top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+    margin-left: 21px;
+    margin-right: 20px;
+    margin-bottom: 28px; 
 }
 
+.border {
+    border-top: 1px dashed black; 
+}
+
+/* Middle of Page */
 
 
 
